# morph_parser

./: .gitignore  README.md  pyproject.toml  requirements.txt
_quarto/: _quarto.yml  clmet_productivity_workflow.ipynb  get-started.qmd  index.qmd  morph-parser_training.ipynb  objects.json  references.bib  technical-notes.qmd
_quarto/data/clmet/1710-1780/: burke - on conciliation with america.txt  burke - thoughts on the present discontents.txt  chesterfield - letters to his son on the art 1.txt  chesterfield - letters to his son on the art 2.txt  fielding - amelia.txt  fielding - the governess.txt  fielding - tom jones.txt  gay - the beggar's opera.txt  (+19 more)
morph_parser/: __init__.py  affix_resources.py  analyzer.py  cache.py  cli.py  decomposition.py  frequencies.py  lexicon_resources.py  matrices.py  models.py  parser.py  productivity.py  roles.py  schemas.py  summary_metrics.py  text.py  transforms.py
morph_parser/corpus/: __init__.py  config.py  parse_utils.py  performance.py  validation.py
morph_parser/prep/: __init__.py  audit_data.py  audit_orthography.py  audit_segmentation_gap.py  audit_segmentation_variants.py  audit_suffix_consistency.py  audit_utils.py  audit_wiktionary.py  build_affix_resource_map.py  build_seed_parse_cache.py  build_training_data.py  candidate_inventory.py  eval_drop_soft_recovery.py  publish_source_assets.py
morph_parser/resources/: decomposition_chain_map_mined_v1.json  decomposition_chain_map_v1.json  protected_monomorphemes_v1.json  seed_parse_cache_exclusions_v1.json  seed_parse_cache_manual_v1.json  seed_parse_cache_v1.json
(+92 files in other folders)
